# odoo-ai-office

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  compose.dev.yml  compose.prod.yml  ruff.toml
.github/workflows/: ci.yml  release.yml
codex/: claude_status.md
docs/: account_ai_office_flow.html  deployment-guide.md  env-reference.md  runbook.md
mcp_servers/: README.md  pyproject.toml
mcp_servers/bridge/: config.py  sync.py  transform.py
mcp_servers/docflow/: client.py  server.py
mcp_servers/odoo_bridge/: client.py  server.py
mcp_servers/tests/: conftest.py  test_bridge_sync.py  test_docflow_server.py  test_odoo_server.py  test_transform.py
odoo/addons/account_ai_office/: __manifest__.py
odoo/addons/account_ai_office/data/: mail_alias.xml  seed_policies.xml  sequence.xml
odoo/addons/account_ai_office/models/: __init__.py  ai_audit_log.py  ai_case.py  ai_policy.py  ai_suggestion.py
service/: Dockerfile  pyproject.toml
service/app/: logging_config.py  main.py
service/app/agents/: document_parser.py  dummy_agent.py  enrichment_agent.py  kontierung_agent.py  opos_agent.py  validation_agent.py
service/app/enrichment/: router.py
service/app/llm/: __init__.py  client.py
service/app/opos/: router.py
service/app/orchestrator/: router.py
service/app/schemas/: base.py  enrich.py  orchestrate.py
service/tests/: test_enrich_contract.py  test_health.py  test_kontierung.py  test_opos_agent.py  test_opos_contract.py  test_orchestrate_contract.py  test_performance.py  test_validation_agent.py
service/tests/load/: locustfile.py
(+26 files in other folders)
