[project]
name = "ai-office-mcp-servers"
version = "0.1.0"
description = "MCP servers bridging DocumentFlow and Odoo AI Office"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["docflow*", "odoo_bridge*", "bridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
